css/main.css
html,
body {
  height: 100%;
  width: 100%;
}

.home * {
  color: lightskyblue;
}

i:hover {
  color: steelblue;
}

h1 {
  text-align: center;
}

/* all pages fill screen */
.page {
  min-height: 100%;
  width: 100%;
}

.cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.cards * {
  flex-grow: 1;
}

.technologies .cards * {
  max-width: 25rem;
  text-align: center;
}

/* hero page parallax */
.home {
  /* The image used */
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0.6) 100%
    ),
    url("../assets/cube.jpg");
  background-color: rgba(0, 0, 0, 0.6);
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* scroll to proper section anchor locations by providing a dummy "anchor" with a negative margin */
.anchor {
  display: block;
  height: 50px;
  margin-top: -50px;
  visibility: hidden;
}

/* prevent navbar content overflow */
body {
  padding-top: 50px;
}

/* decrease font size and turn off parallax on phones and tablets*/
@media screen and (max-device-width: 1366px) {
  /* p {
    font-size: 1rem;
  } */
  .home {
    background-attachment: scroll;
  }
}

